fixing hero bug on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -3,9 +3,6 @@
     position: relative; 
     height: 100vh;
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -13,5 +10,10 @@
 @media screen and (max-width:800px){
     #section-hero{
         background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://ytts-coaching.s3.us-east-2.amazonaws.com/ytts_small_hero.jpg');
+        position: relative; 
+        height: 100vh;
+        width: 100%;
+        background-size: cover;
+        background-attachment: fixed;
     }
 }
